...
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="#3f51b5"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword"
        tools:textColor="@color/white" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="0dp"
        android:layout_height="65dp"
...
        android:ems="10"
        android:hint="Create Password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="35dp"
...
